spacing correction

--- a/style.css
+++ b/style.css
@@ -435,7 +435,7 @@ body {
   text-align: center;
 }
 .product-container {
-  margin-top: 40px;
+  margin-top: 24px;
   min-height: 560px;
 }
 .product {
@@ -491,6 +491,9 @@ body {
   text-align: center;
   font-weight: 600;
 }
+.product-container .product-heading {
+  margin-bottom: 48px;
+}
 .product-sub-heading {
   font-size: 22px;
   color: #3d3d3d;
@@ -506,6 +509,7 @@ body {
   width: 1096px;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding-bottom: 24px;
 }
 .product-left-wrapper {
   width: 40%;
